--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,20 @@
 
     <string name="open">Open Drawer</string>
     <string name="close">Close Drawer</string>
-
+<!--unit1-->
     <string name="stringEndLine">\n\n\n</string>
     <string name="styleText1"><b>Hardware</b> is any electronic or mechanical part you can see or touch.</string>
     <string name="styleText2"><b>Software</b> is a set of instructions, called a program, which tells the computer what to do.</string>
     <string name="styleText3"><b>Software</b> There are three basic hardware sections: <b>the central processing unit ( CPU)</b>, <b>main memory</b> and <b>peripherals</b>. Perhaps the most influential component is the central processing unit. Its function is to program instructions and coordinate the activities of all the other units. I a way, it is the “brain off the computer. The main memory ( a collection of RAM chips) holds the instructions and data which are being processed by the CPU. Peripherals are the physical units attracted to the computer. The include storage devices and input/ output devices.</string>
+
+    <!--unit2-->
+    <string name="styleText4"><b>Direction:</b>Match the words with pictures.</string>
+    <string name="styleText5"><b>The control unit</b> examines the instructions in the user’s program, inthe user’s program, interprets each instruction and causes the circuits and the rest of the components-monitor disk drivers, etc-to execute the functions specified.</string>
+    <string name="styleText6"><b>The arithmetic logic unit (ALU)</b>  performs mathematical calculations (+, -, etc) and logical operations (AND, OR, NOT)</string>
+    <string name="styleText7"><b>The registers</b> are high-speed units of memory used to store and control data. One of the registers (the program counter, or PC) keeps track of the next instruction to be performed in the main memory. The other (the instruction register, or IR) holds the instruction that is being executed.</string>
+    <string name="styleText8">The power and performance of a computer is partly determined by the speed of its processor. <b>A system clock</b> sends out signals at fixed intervals to measure and synchronize the low of data. <b>Clock speed</b> is measured in gigahertz (GHz). For example, a CPU running at 4GHz (four thousand million hertz, or cycles, per second) will enable your PC to handle the most demanding applications.</string>
+
+
+
 
 </resources>
