--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,76 @@
     <string name="styleText54"><b>Problem: Nothing happens when you try to print.</b> are several reasons a printer might not work, even if everything\'s connected properly. First, you\'ll want to make sure you\'ve put paper into the correct tray and there\'sno paper stuck inside the printer.</string>
     <string name="styleText55"><b>Problem: The printer has paper and nothing\'s stuck, but it still won\'t print.</b> If the solutions above don\'t work, <b>try canceling the print job</b> from the computer and trying again. Many printers also have a button you can use to restart the current job. If all else fails, try turning the printer off and on again to see if it fixes the problem.</string>
     <string name="styleText56"><b>Problem: The printer works, but the text is very light and difficult to read.</b> If this happens, it probably means your printer requires a new <b>ink cartridge</b>   to keep working. The instruction manual included with the printer should note what type of cartridge you\'ll need to buy.</string>
+    <string name="styleText57">Practice</string>
+    <string name="styleText58">Part 1: Read the text above and then answer these questions.</string>
+    <string name="styleText59">1.What are the main parts of the CPU?</string>
+    <string name="styleText60">a.Hardware and software</string>
+    <string name="styleText61">b.Keyboard output devices</string>
+    <string name="styleText62">c.Storage devices</string>
+    <string name="styleText63">2. What does ALU stand for?</string>
+    <string name="styleText64">a. Architecture Logic Unit</string>
+    <string name="styleText65">b. Arithmetic Logic Unit</string>
+    <string name="styleText66">c. Artificial Logic Unit</string>
+    <string name="styleText67">3. What does ALU do?</string>
+    <string name="styleText68">a. To store information</string>
+    <string name="styleText69">b. To control data</string>
+    <string name="styleText70">c. To perform mathematical calculations</string>
+    <string name="styleText71">4.How much is one gigahertz?</string>
+    <string name="styleText72">a.one thousand million hertz</string>
+    <string name="styleText73">b.one thousand hertz</string>
+    <string name="styleText74">c. one hundred hertz</string>
+    <string name="styleText75">5. What type of memory is temporary?</string>
+    <string name="styleText76">a.RAM</string>
+    <string name="styleText77">b.ROM</string>
+    <string name="styleText78">c.Cards</string>
+    <string name="styleText79">6. What type of memory is permanent and includes instructions needed by the CPU?</string>
+    <string name="styleText80">a.Ram</string>
+    <string name="styleText81">b.ROM</string>
+    <string name="styleText82">c.Cards</string>
+    <string name="styleText83">7.How can RAM be increased?</string>
+    <string name="styleText84">a. By adding extra system clock.</string>
+    <string name="styleText85">b. By adding extra chips.</string>
+    <string name="styleText86">c. By saving information in CPU</string>
+    <string name="styleText87">8. What is the benefit of having expansion slots?</string>
+    <string name="styleText88">a.Adding features like sound, memory and network capabilities.</string>
+    <string name="styleText89">b.Adding features like</string>
+    <string name="styleText90">c.</string>
+    <string name="styleText91">Part 2.1: Look at the picture and fill in the blanks with the words given. (9-13)</string>
+    <string name="styleText92">function keys, alphanumeric keys, numeric keypad, cursor control keys, dedicated keys</string>
+    <string name="styleText93">Part 2.2: Match the descriptions (1-8) with the names of the keys (a-h). Then find them on the keyboard. (14-21)</string>
+    <string name="styleText94">a.arrow keys, b. return / enter, c. Caps Lock, d. Shift, e. Tab, f. Space bar, g. Backspace, h. Ctrl</string>
+    <string name="styleText95">13. A long key at the bottom of the keyboard. Each time it is pressed, it produces a blank space.</string>
+    <string name="styleText96">14. It moves the cursor to the beginning of a new line. It is also used to confirm commands.</string>
+    <string name="styleText97">15. It works in combination with other keys. For example, you press this key and C to copy the selected text.</string>
+    <string name="styleText98">16. It removes the character to the left of the cursor or any selected text.</string>
+    <string name="styleText99">17. It produces UPPER CASE characters.</string>
+    <string name="styleText100">18. It produces UPPER CASE letters, but it does not effect numbers and symbols.</string>
+    <string name="styleText101">19. It moves the cursor horizontally to the right for a fixed number of spaces ( in tabulations and data fields)</string>
+    <string name="styleText102">20. They are used to move the cursor, as an alternative to the mouse</string>
+    <string name="styleText103">Listening</string>
+    <string name="styleText104">Listen and fill in the blank..</string>
+    <string name="styleText105">1.To go back one space, hit the _________</string>
+    <string name="styleText106">2.To change to capital letters, press the _________</string>
+    <string name="styleText107">3.To change the capital letters permanently, hit the _________</string>
+    <string name="styleText108">4.To insert a tabulation, press the _________</string>
+    <string name="styleText109">5.To activate the “Ctrl” functions, press the _________</string>
+    <string name="styleText110">6.To activate the “alt” function, hit the _________</string>
+    <string name="styleText111">7.To stop the computer doing something, you can press the _________</string>
+    <string name="styleText112">8.Select the text you want to remove, and hit the _________</string>
+    <string name="styleText113">9.Please _________ your pass word.</string>
+    <string name="styleText114">10.It took me two hours to _________</string>
+    <string name="styleText115">Language Work</string>
+    <string name="styleText116">Describing functions</string>
+    <string name="styleText117">There are many ways of describing a devices function</string>
+    <string name="styleText118">1. preposition (for) + gerund (v.ing)</string>
+    <string name="styleText119">Example: The mouse is a device for controlling the cursor and selecting items on the screen.</string>
+    <string name="styleText120">2. relative clause (which/ that)+ be (is / am / are ) + used to + infinitive</string>
+    <string name="styleText121">Example: The mouse is a device which is used to control the cursor and select items on the screen.</string>
+    <string name="styleText122">Describing functions</string>
+    <string name="styleText123">Look at language work and then write a description their functions</string>
+    <string name="styleText124">1. The Sony PlayStation 3 controller.</string>
+    <string name="styleText125">2. Bar code reader</string>
+    <string name="styleText126">3. webcam</string>
 
 
 </resources>
