--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,49 +29,49 @@
     <string name="styleText17">2.1 What is computer keyboard?</string>
     <string name="styleText18">The keyboard is the piece of <u>computer hardware</u> used to input text, characters, and other commands into a computer or similar device. Even though the keyboard is an external <u>peripheral device</u> in a desktop system (it sits outside the main <u>computer housing</u>), or is \"virtual\" in a tablet PC, it is an essential part of the complete computer system.</string>
     <string name="styleText19">A standard keyboard</string>
-    <string name="styleText20">1.Cursor control keys include arrow keys that move that insertion point up, down, right and left, and keys such as End, Home, Page Up and Page Down, which are used in word processing to move around a long document.</string>
-    <string name="styleText21">2.Alphanumeric keys represent letters and numbers, as arranged on a typewriter.</string>
-    <string name="styleText22">3.Function keys appear at the top of the keyboard and can be programmed to do special tasks.</string>
-    <string name="styleText23">4.Dedicated keys are used to issue commands or to produce alternative character, e.g. the <i>Ctrl key</i> or the <i>Alt key.</i></string>
+    <string name="styleText20">1. Cursor control keys include arrow keys that move that insertion point up, down, right and left, and keys such as End, Home, Page Up and Page Down, which are used in word processing to move around a long document.</string>
+    <string name="styleText21">2. Alphanumeric keys represent letters and numbers, as arranged on a typewriter.</string>
+    <string name="styleText22">3. Function keys appear at the top of the keyboard and can be programmed to do special tasks.</string>
+    <string name="styleText23">4. Dedicated keys are used to issue commands or to produce alternative character, e.g. the <i>Ctrl key</i> or the <i>Alt key.</i></string>
     <string name="styleText24">5.A numeric keypad appears to the right of the main keyboard. The <i>NumLock key</i> is used to switch from numbers to editing keys.</string>
     <string name="styleText25">2.2 What is a computer mouse?</string>
     <string name="styleText26">The computer mouse is an input device. It lets us tell the computer what we want by pressing on it. We call it a mouse because it looks like a real mouse. A component mouse is made up of three parts as follows; body, cable and buttons.</string>
     <string name="styleText27">When we look at the computer screen we see an arrow or a shape that moves with the mouse. This is the <b>CURSOR.</b> To tell the computer what to do, we first <b>POINT</b> the cursor by moving the mouse. Then when the cursor is where we want it, we press the button or <b>CLICK.</b></string>
     <string name="styleText28">3. How to scan an image?</string>
-    <string name="styleText29">1.Make sure the scanner is connected to the computer.</string>
-    <string name="styleText30">2.Lift the lid and put the original on the scanner glass.</string>
-    <string name="styleText31">3.For high image quality, scan at 300 or higher.</string>
-    <string name="styleText32">4.The scanning software will automatically do a preview.</string>
-    <string name="styleText33">5.If the image is too dark or too light, you can adjust the brightness and contrast.</string>
-    <string name="styleText34">6.Click \"scan\".</string>
-    <string name="styleText35">7.If the scanned text, it can be \"read\" by OCR software.</string>
-    <string name="styleText36">8.If you want to save the image, choose a file format JPEG is a good choice for photos.</string>
-    <string name="styleText37">9.The scanned image can be manipulated using image editing software.</string>
-    <string name="styleText38">10.An all-in-one printer/scanner can print, scan and copy.</string>
+    <string name="styleText29">1. Make sure the scanner is connected to the computer.</string>
+    <string name="styleText30">2. Lift the lid and put the original on the scanner glass.</string>
+    <string name="styleText31">3. For high image quality, scan at 300 or higher.</string>
+    <string name="styleText32">4. The scanning software will automatically do a preview.</string>
+    <string name="styleText33">5. If the image is too dark or too light, you can adjust the brightness and contrast.</string>
+    <string name="styleText34">6. Click \"scan\".</string>
+    <string name="styleText35">7. If the scanned text, it can be \"read\" by OCR software.</string>
+    <string name="styleText36">8. If you want to save the image, choose a file format JPEG is a good choice for photos.</string>
+    <string name="styleText37">9. The scanned image can be manipulated using image editing software.</string>
+    <string name="styleText38">10. An all-in-one printer/scanner can print, scan and copy.</string>
     <string name="styleText39">Picture A is a <b>handheld scanner.</b></string>
     <string name="styleText40">Picture B is a <b>flatbed scanner.</b></string>
     <string name="styleText41">4. Printing</string>
     <string name="styleText42">How to set up a new printer</string>
     <string name="styleText43">Here are the basic steps you’ll follow to set up almost any printer.</string>
     <string name="styleText44">Plug in the printer’s power cable and make sure it’s turned on.</string>
-    <string name="styleText45">1.Plug in the printer’s power cable and make sure it’s turned on.</string>
-    <string name="styleText46">2.Connect the included cable (usually a USB cable) from the printer to the computer.</string>
+    <string name="styleText45">1. Plug in the printer’s power cable and make sure it’s turned on.</string>
+    <string name="styleText46">2. Connect the included cable (usually a USB cable) from the printer to the computer.</string>
     <string name="styleText47"><b>Note:</b> The process will be different if you’re using a wireless printer.</string>
-    <string name="styleText48">3.On your computer, locate the printer settings. If you’re using a windows computer, you’ll find these in the <b>Control Panel.</b> If you’re using a Mac, you’ll them in <b>System Preferences.</b></string>
-    <string name="styleText49">4.Look for the option to Add a printer, then follow the instructions that appear.</string>
-    <string name="styleText50">5.Now it\'s time to try printing something! For example, you could try printing <u>this test page.</u> After you click the link, select <b>File > Print</b> your web browser\'s menu, or simply press <b>Ctrl+P</b> on your keyboard (or <p>Command+P</p> if you\'re on a Mac).></string>
-    <string name="styleText51">6.A dialog box will appear. Locate and select the new printer from the list, then click Print.</string>
-    <string name="styleText52">7.The item will then be printed . But if it doesn\'t work, don’t panic! You can try using some of the solutions to common the problems below.</string>
+    <string name="styleText48">3. On your computer, locate the printer settings. If you’re using a windows computer, you’ll find these in the <b>Control Panel.</b> If you’re using a Mac, you’ll them in <b>System Preferences.</b></string>
+    <string name="styleText49">4. Look for the option to Add a printer, then follow the instructions that appear.</string>
+    <string name="styleText50">5. Now it\'s time to try printing something! For example, you could try printing <u>this test page.</u> After you click the link, select <b>File > Print</b> your web browser\'s menu, or simply press <b>Ctrl+P</b> on your keyboard (or <p>Command+P</p> if you\'re on a Mac).></string>
+    <string name="styleText51">6. A dialog box will appear. Locate and select the new printer from the list, then click Print.</string>
+    <string name="styleText52">7. The item will then be printed . But if it doesn\'t work, don’t panic! You can try using some of the solutions to common the problems below.</string>
     <string name="styleText53"><b>Solutions to common problems</b></string>
     <string name="styleText54"><b>Problem: Nothing happens when you try to print.</b> are several reasons a printer might not work, even if everything\'s connected properly. First, you\'ll want to make sure you\'ve put paper into the correct tray and there\'sno paper stuck inside the printer.</string>
     <string name="styleText55"><b>Problem: The printer has paper and nothing\'s stuck, but it still won\'t print.</b> If the solutions above don\'t work, <b>try canceling the print job</b> from the computer and trying again. Many printers also have a button you can use to restart the current job. If all else fails, try turning the printer off and on again to see if it fixes the problem.</string>
     <string name="styleText56"><b>Problem: The printer works, but the text is very light and difficult to read.</b> If this happens, it probably means your printer requires a new <b>ink cartridge</b>   to keep working. The instruction manual included with the printer should note what type of cartridge you\'ll need to buy.</string>
     <string name="styleText57">Practice</string>
     <string name="styleText58">Part 1: Read the text above and then answer these questions.</string>
-    <string name="styleText59">1.What are the main parts of the CPU?</string>
-    <string name="styleText60">a.Hardware and software</string>
-    <string name="styleText61">b.Keyboard output devices</string>
-    <string name="styleText62">c.Storage devices</string>
+    <string name="styleText59">1. What are the main parts of the CPU?</string>
+    <string name="styleText60">a. Hardware and software</string>
+    <string name="styleText61">b. Keyboard output devices</string>
+    <string name="styleText62">c. Storage devices</string>
     <string name="styleText63">2. What does ALU stand for?</string>
     <string name="styleText64">a. Architecture Logic Unit</string>
     <string name="styleText65">b. Arithmetic Logic Unit</string>
@@ -80,30 +80,30 @@
     <string name="styleText68">a. To store information</string>
     <string name="styleText69">b. To control data</string>
     <string name="styleText70">c. To perform mathematical calculations</string>
-    <string name="styleText71">4.How much is one gigahertz?</string>
-    <string name="styleText72">a.one thousand million hertz</string>
-    <string name="styleText73">b.one thousand hertz</string>
+    <string name="styleText71">4. How much is one gigahertz?</string>
+    <string name="styleText72">a. one thousand million hertz</string>
+    <string name="styleText73">b. one thousand hertz</string>
     <string name="styleText74">c. one hundred hertz</string>
     <string name="styleText75">5. What type of memory is temporary?</string>
-    <string name="styleText76">a.RAM</string>
-    <string name="styleText77">b.ROM</string>
-    <string name="styleText78">c.Cards</string>
+    <string name="styleText76">a. RAM</string>
+    <string name="styleText77">b. ROM</string>
+    <string name="styleText78">c. Cards</string>
     <string name="styleText79">6. What type of memory is permanent and includes instructions needed by the CPU?</string>
-    <string name="styleText80">a.Ram</string>
-    <string name="styleText81">b.ROM</string>
-    <string name="styleText82">c.Cards</string>
-    <string name="styleText83">7.How can RAM be increased?</string>
+    <string name="styleText80">a. Ram</string>
+    <string name="styleText81">b. ROM</string>
+    <string name="styleText82">c. Cards</string>
+    <string name="styleText83">7. How can RAM be increased?</string>
     <string name="styleText84">a. By adding extra system clock.</string>
     <string name="styleText85">b. By adding extra chips.</string>
     <string name="styleText86">c. By saving information in CPU</string>
     <string name="styleText87">8. What is the benefit of having expansion slots?</string>
-    <string name="styleText88">a.Adding features like sound, memory and network capabilities.</string>
-    <string name="styleText89">b.Adding features like</string>
-    <string name="styleText90">c.</string>
-    <string name="styleText91">Part 2.1: Look at the picture and fill in the blanks with the words given. (9-13)</string>
+    <string name="styleText88">a. Adding features like sound, memory and network capabilities.</string>
+    <string name="styleText89">b. Adding features like</string>
+    <string name="styleText90">c. </string>
+    <string name="styleText91">Part 2.1: Look at the picture and fill in the blanks with the words given. (9&#45;13)</string>
     <string name="styleText92">function keys, alphanumeric keys, numeric keypad, cursor control keys, dedicated keys</string>
-    <string name="styleText93">Part 2.2: Match the descriptions (1-8) with the names of the keys (a-h). Then find them on the keyboard. (14-21)</string>
-    <string name="styleText94">a.arrow keys, b. return / enter, c. Caps Lock, d. Shift, e. Tab, f. Space bar, g. Backspace, h. Ctrl</string>
+    <string name="styleText93">Part 2.2: Match the descriptions (1&#45;8) with the names of the keys (a&#45;h). Then find them on the keyboard. (14&#45;21)</string>
+    <string name="styleText94">\ta. arrow keys \t\tb. return / enter\n\tc. Caps Lock \t\td. Shift \t\t\t\t\t\t\te. Tab\n\tf. Space bar \t\t\tg. Backspace \t\th. Ctrl</string>
     <string name="styleText95">13. A long key at the bottom of the keyboard. Each time it is pressed, it produces a blank space.</string>
     <string name="styleText96">14. It moves the cursor to the beginning of a new line. It is also used to confirm commands.</string>
     <string name="styleText97">15. It works in combination with other keys. For example, you press this key and C to copy the selected text.</string>
@@ -114,16 +114,16 @@
     <string name="styleText102">20. They are used to move the cursor, as an alternative to the mouse</string>
     <string name="styleText103">Listening</string>
     <string name="styleText104">Listen and fill in the blank..</string>
-    <string name="styleText105">1.To go back one space, hit the _________</string>
-    <string name="styleText106">2.To change to capital letters, press the _________</string>
-    <string name="styleText107">3.To change the capital letters permanently, hit the _________</string>
-    <string name="styleText108">4.To insert a tabulation, press the _________</string>
-    <string name="styleText109">5.To activate the “Ctrl” functions, press the _________</string>
-    <string name="styleText110">6.To activate the “alt” function, hit the _________</string>
-    <string name="styleText111">7.To stop the computer doing something, you can press the _________</string>
-    <string name="styleText112">8.Select the text you want to remove, and hit the _________</string>
-    <string name="styleText113">9.Please _________ your pass word.</string>
-    <string name="styleText114">10.It took me two hours to _________</string>
+    <string name="styleText105">1. To go back one space, hit the _________</string>
+    <string name="styleText106">2. To change to capital letters, press the _________</string>
+    <string name="styleText107">3. To change the capital letters permanently, hit the _________</string>
+    <string name="styleText108">4. To insert a tabulation, press the _________</string>
+    <string name="styleText109">5. To activate the “Ctrl” functions, press the _________</string>
+    <string name="styleText110">6. To activate the “alt” function, hit the _________</string>
+    <string name="styleText111">7. To stop the computer doing something, you can press the _________</string>
+    <string name="styleText112">8. Select the text you want to remove, and hit the _________</string>
+    <string name="styleText113">9. Please _________ your pass word.</string>
+    <string name="styleText114">10. It took me two hours to _________</string>
     <string name="styleText115">Language Work</string>
     <string name="styleText116">Describing functions</string>
     <string name="styleText117">There are many ways of describing a devices function</string>
