--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,6 +136,8 @@
     <string name="styleText124">1. The Sony PlayStation 3 controller.</string>
     <string name="styleText125">2. Bar code reader</string>
     <string name="styleText126">3. webcam</string>
+    <string name="styleText147"><b>Picture A:</b> https://precisionsecuritysystems.com/product/handheld-scanner</string>
+    <string name="styleText148"><b>Picture B:</b> https://www.indiamart.com/proddetail/flatbed-scanner-19071977630.html</string>
 
 
 </resources>
